--- a/backend/package.json
+++ b/backend/package.json
@@ -25,8 +25,8 @@
     "winston": "^3.17.0"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/node": "^22.10.0",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
