--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "winston": "^3.17.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.0",
     "nodemon": "^3.1.7",
